[package]
name = "hazelcast_rest"
description = "A library wrapping Hazelcast Rest API"
repository = "https://github.com/Strilets-Glib-FI41mn/rust-hazelcast-rest"
version = "0.2.0"
authors = ["Orhan Balci <orhanbalci@gmail.com>, Strilets Glib (updated depenencies)"]
keywords = ["rest", "api", "client", "hazelcast"]
documentation ="https://orhanbalci.github.io/rust-hazelcast-rest"
license="MIT"
exclude=[".travis.yml"]

[dependencies]
reqwest = { version = "^0.12.0", features = ["blocking"]}
